--- a/ready2work/.env
+++ b/ready2work/.env
@@ -1,1 +1,3 @@
-API_key: 8cb098cea19731f9696fdb0b60ad44ccb9f62fe0
+API_key=8cb098cea19731f9696fdb0b60ad44ccb9f62fe0
+
+REACT_APP_API_URL=https://dark-erin-panther-garb.cyclic.app
