--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 API_key=8cb098cea19731f9696fdb0b60ad44ccb9f62fe0
 
 REACT_APP_API_URL=http://localhost:5005
-=https://dark-erin-panther-garb.cyclic.app
+REACT_APP_DEPLOYMENT_URL=https://dark-erin-panther-garb.cyclic.app
+
